Logo, Phone fix
Phone is now bigger in Desktop, and is not cropped on the sides. Logo is now and svg and aligned in the middle with the text.

--- a/css/temp-style.css
+++ b/css/temp-style.css
@@ -1,12 +1,11 @@
 /* basics */
+
 :root {
-  /* --bg-color: #fff;
-  --fg-color: #303030;
-  --highlight-color: #b5433b; */
   --bg-color: #303030;
   --fg-color: #fff;
   --highlight-color: #b5433b;
 }
+
 html, body {
   margin: 0;
   height: 100%;
@@ -20,16 +19,18 @@ body {
 }
 
 img {
-  max-width: 100%;
+  width: 100%;
 }
 
 /* fonts & text */
-h1{
+
+h1 {
   color: var(--highlight-color);
   font-size: 3rem;
   line-height: 1.2;
 }
-.sub-title{
+
+.sub-title {
   font-size: 1.3rem;
 }
 
@@ -37,17 +38,19 @@ h1{
   h1 {
     font-size: 4.5rem;
   }
-  .sub-title{
+  .sub-title {
     font-size: 1.5rem;
   }
 }
 
 /* main-layout */
-.main-layout{
+
+.main-layout {
   display: grid;
   grid-template-columns: 1rem 1fr 1fr 1rem;
 }
-header{
+
+header {
   display: grid;
   grid-template-columns: 1rem 1fr 1fr 1rem;
 }
@@ -57,7 +60,7 @@ header{
   grid-column-end: 4;
 }
 
-.hero-image{
+.hero-image {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -65,43 +68,40 @@ header{
   margin: 0;
 }
 
-.hero-text{
+.hero-text {
   text-align: center;
 }
 
-.hero-text h1{
+.hero-text h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
 }
-.hero-text p{
+
+.hero-text p {
   margin-top: 0;
   margin-bottom: 1rem;
 }
 
 @media only screen and (min-width: 700px) {
-  .main-layout{
+  .main-layout {
     grid-template-columns: 2rem 1fr 1fr 1fr 1fr 2rem;
     max-width: 1300px;
     margin: 0 auto;
   }
-  
-  header{
+  header {
     grid-template-columns: 2rem 1fr 1fr 1fr 1fr 2rem;
     max-width: 1300px;
     margin: 0 auto;
   }
-  
   .right-block {
     grid-column-start: 4;
     grid-column-end: 6;
   }
-  
   .left-block {
     grid-column-start: 2;
     grid-column-end: 4;
   }
-
-  .hero-text{
+  .hero-text {
     text-align: left;
     display: flex;
     flex-direction: column;
@@ -109,8 +109,10 @@ header{
     grid-row-start: 1;
   }
 }
+
 /* header logo */
-.logo{
+
+.logo {
   width: 3rem;
   padding: 1rem 0;
   display: flex;
@@ -119,24 +121,24 @@ header{
   color: var(--fg-color);
   font-size: 1.5rem;
   font-weight: 700;
+  align-items: center;
 }
 
-
 /* css-phone */
-.phone{
+
+.phone {
   width: calc(6.91rem * 1.5);
   height: calc(15.17rem * 1.5);
   transform: rotate3d(-1, .5, -.5, -45deg);
-  /* box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5); */
   filter: drop-shadow(0 10px 20px rgba(0, 0, 0, 0.5));
 }
+
 .phone .__phone-border {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  /* background-color: var(--fg-color); */
-  background: rgb(255,255,255);
-  background: linear-gradient(90deg, rgba(30,30,30,1) 98%, rgba(0,0,0,1) 100%);
+  background: rgb(30, 30, 30);
+  background: linear-gradient(90deg, rgba(30, 30, 30, 1) 98%, rgba(0, 0, 0, 1) 100%);
   border-radius: 20px;
   display: flex;
   flex-direction: row;
@@ -149,14 +151,19 @@ header{
   width: 100%;
   height: 100%;
   border-radius: 15px;
-  /* background: rgb(63,94,251);
-  background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);  */
   background: url(/media/img/screenshot.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
 }
+@media only screen and (min-width: 700px) {
+  .phone {
+    width: calc(6.91rem * 2.5);
+    height: calc(15.17rem * 2.5);
+  }
+}
 
 /* Google button */
-.google-button{
+
+.google-button {
   max-width: 12rem;
 }
